# insightface-api

./: docker-compose.yml  pyproject.toml
app/: main.py
