[tool.poetry]
name = "insightface-api"
version = "0.1.0"
description = "A simple deepinsight/insightface implementation with FastAPI for face verification."
authors = ["Jeremy Leonardo <jeremy@hachimail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.62.0"
uvicorn = "^0.13.0"
sqlalchemy = "^1.3.20"
psycopg2 = "^2.9.6"
python-multipart = "^0.0.5"
python-dotenv = "^0.15.0"
numpy = "^1.23.1"
# onnxruntime = "^1.17.0"  # Для CPU
onnxruntime-gpu = "1.12.0"  # Для GPU
insightface = "^0.7.3"
opencv-python = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
